--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,15 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:debuggable="true"
         android:theme="@style/AppTheme">
 
+        <activity
+            android:name=".view.RegisterUserActivity"
+            android:label="@string/title_activity_register_user"
+            android:theme="@style/AppTheme.NoActionBar"/>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
     </application>
 
