Adding menu to action bar with structure for actions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         </activity>
 
         <activity
-            android:name=".view.MainActivity">
+            android:name=".view.MainActivity"
+            android:label="">
         </activity>
 
     </application>
