--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,11 @@ dependencies {
     })
 
     // Intent mocking support
-    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
+    androidTestCompile ('com.android.support.test.espresso:espresso-intents:2.2.2'){
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude module: 'recyclerview-v7'
+    }
 
 
     androidTestCompile 'com.android.support:support-annotations:23.4.0'
