--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.jaredrummler:material-spinner:1.1.0'
 }
