--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,9 @@
 apply plugin: 'com.android.application'
+
+configurations.all {
+    resolutionStrategy.force 'com.android.support:support-annotations:23.4.0'
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "24.0.0"
