--- a/circle.yml
+++ b/circle.yml
@@ -28,3 +28,6 @@ test:
     - cp -r app/build/outputs $CIRCLE_ARTIFACTS
     # copy the test results to the test results directory.
     - cp -r app/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORTS
+    - gradle check jacocoTestReport
+    post:
+    - cp -R build/reports/* $CIRCLE_ARTIFACTS
