--- a/circle.yml
+++ b/circle.yml
@@ -22,7 +22,7 @@ test:
     - sleep 30
     - adb shell input keyevent 82
     # run tests  against the emulator.
-    - ./gradlew assembleDebug -PdisablePreDex:
+    - ./gradlew test -PdisablePreDex:
         timeout: 7200 #Sets time limit
     # copy the build outputs to artifacts
     - cp -r app/build/outputs $CIRCLE_ARTIFACTS
